--- a/src/app/general/login/login.component.html
+++ b/src/app/general/login/login.component.html
@@ -1,29 +1,47 @@
 <div class="login-container">
   @if(!isLoggedIn){
-  <form name="loginForm" (ngSubmit)="onSubmit()">
+  <form
+    name="loginForm"
+    (ngSubmit)="f.form.valid && onSubmit()"
+    #f="ngForm"
+    novalidate
+  >
     <div class="form-group">
       <label for="username">User Name</label>
       <input
         type="text"
         class="form-control"
-        name="userName"
+        name="username"
         [(ngModel)]="loginForm.userName"
-        required
         [ngModelOptions]="{standalone: true}"
+        required
         #username="ngModel"
+        [ngClass]="{ 'is-invalid': f.submitted && username.errors }"
       />
+      @if(username.errors && f.submitted){
+      <div class="invalid-feedback">userName is required!</div>
+      }
     </div>
     <div class="form-group">
-      <label for="passWord">Pass Work</label>
+      <label for="password">Pass Work</label>
       <input
         type="text"
         class="form-control"
-        nmae="passWord"
-        [(ngModel)]="loginForm.passWord"
+        nmae="password"
+        minlength="6"
+        [(ngModel)]="loginForm.password"
         required
+        #password="ngModel"
         [ngModelOptions]="{standalone: true}"
-        #passWord="ngModel"
+        [ngClass]="{ 'is-invalid': f.submitted && password.errors }"
       />
+      @if(password.errors && f.submitted){
+      <div class="invalid-feedback">
+        @if(password.errors['required']){ password is required! }
+        @if(password.errors['minlenght']){password must be at least 6 character}
+      </div>
+
+      }
     </div>
     <div class="form-group"><button class="btn btn-login">Login</button></div>
   </form>
